--- a/templates/admin/judge/judge/change_form.html
+++ b/templates/admin/judge/judge/change_form.html
@@ -2,13 +2,7 @@
 {% load i18n %}
 
 {% block extrahead %}{{ block.super }}
-    <script>
-        django.jQuery(($) => {
-            $('.disconnect-link').appendTo('div#bottombar').show();
-            $('.terminate-link').appendTo('div#bottombar').show();
-            $('.disable-link').appendTo('div#bottombar').show();
-        });
-    </script>
+    <script src="{{ static('bundled/admin/judge/judge/change-form.js') }}"></script>
 {% endblock extrahead %}
 
 {% block after_field_sets %}{{ block.super }}
