--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
         {% if request.in_contest %}
             <script
                 src="{{ static('bundled/base/push.js') }}"
-                data-should-push="{{ EVENT_LAST_MSG and request.participation.contest.push_announcements and request.participation.virtual <= 0 }}"
+                data-should-push="{{ 'true' if EVENT_LAST_MSG and request.participation.contest.push_announcements and request.participation.virtual <= 0 else 'false' }}"
                 data-contest-id="{{ request.participation.contest.id_secret }}"
             ></script>
         {% endif %} 
