--- a/templates/problem/list.html
+++ b/templates/problem/list.html
@@ -1,7 +1,7 @@
 {% extends "common-content.html" %}
 
 {% block media %}
-    <link rel="stylesheet" href="{{ static('libs/nouislider.min.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider/dist/nouislider.min.css">
     <noscript>
         <style>#category, #types {
             visibility: visible;
@@ -16,100 +16,14 @@
 {% endblock %}
 
 {% block js_media %}
-    <script>
-        window.point_start = Number("{{point_start}}");
-        window.point_end = Number("{{point_end}}");
-        window.point_values = JSON.parse("{{point_values|json|safe}}");
-    </script>
     {% compress js %}
-        <script src="{{ static('libs/nouislider.min.js') }}" type="text/javascript"></script>
-        <script>
-            $(() => {
-                const $form = $('form#filter-form');
-                const $search = $('#search');
-                const $category = $('#category');
-
-                function prep_form() {
-                    // disable point range when searching
-                    $('#point-start').prop('disabled', !!$search.val());
-                    $('#point-end').prop('disabled', !!$search.val());
-                    $search.prop('disabled', !$search.val());
-                    $category.prop('disabled', !$category.val());
-                }
-
-                function clean_submit() {
-                    prep_form();
-                    $form.submit();
-                }
-
-                $category.select2({
-                    theme: '{{ DMOJ_SELECT2_THEME }}'
-                }).css({'visibility': 'visible'}).change(clean_submit);
-                $('#types').select2({
-                    theme: '{{ DMOJ_SELECT2_THEME }}',
-                    multiple: 1, placeholder: "{{ _('Filter by type...') }}"
-                }).css({'visibility': 'visible'});
-
-                // This is incredibly nasty to do but it's needed because otherwise the select2 steals the focus
-                $search.keypress((e) => {
-                    if (e.keyCode == 13)
-                        $('#go').click();
-                });
-
-                $('#random').click((e) => {
-                    var action = $form.attr('action');
-                    $form.attr('action', "{{ url('problem_random') }}").attr('target', '_blank').submit();
-                    $form.attr('action', action).attr('target', '');
-                    e.preventDefault();
-                });
-
-                $('#go').click(clean_submit);
-
-                $('input#full_text, input#hide_solved, input#show_types, input#has_public_editorial').click(() => {
-                    prep_form();
-                    ($('<form>').attr('action', window.location.pathname + '?' + $form.serialize())
-                        .append($('<input>').attr('type', 'hidden').attr('name', 'csrfmiddlewaretoken')
-                            .attr('value', window.parsedToken['csrftoken']))
-                        .attr('method', 'POST').appendTo($('body')).submit());
-                });
-
-                const info_float = $('.info-float');
-                const container = $('#content-right');
-                if (!featureTest('position', 'sticky')) {
-                    fix_div(info_float, 55);
-                    $(window).resize(() => {
-                        info_float.width(container.width());
-                    });
-                    info_float.width(container.width());
-                }
-
-                const intFormatter = {
-                    to(value) {
-                        return value;
-                    },
-                    from(value) {
-                        return +value;
-                    }
-                };
-                const $slider = $('#point-slider');
-                if ($slider.length) {
-                    const $start = $('#point-start');
-                    const $end = $('#point-end');
-
-                    noUiSlider.create($slider[0], {
-                        start: [point_start, point_end],
-                        connect: true,
-                        snap: true,
-                        tooltips: [intFormatter, intFormatter],
-                        range: point_values
-                    }).on('change', (values) => {
-                        var start = +values[0], end = +values[1];
-                        $start.prop('disabled', start === point_values.min).val(start);
-                        $end.prop('disabled', end === point_values.max).val(end);
-                    });
-                }
-            });
-        </script>
+        <script 
+            src="{{ static('bundled/problem/list.js') }}"
+            data-point-start="{{ point_start }}"
+            data-point-end="{{ point_end }}"
+            data-point-values="{{ point_values|json|safe }}"
+            data-select2-theme="{{ DMOJ_SELECT2_THEME }}"
+        ></script>
     {% endcompress %}
 {% endblock %}
 
