--- a/templates/problem/search-form.html
+++ b/templates/problem/search-form.html
@@ -9,13 +9,13 @@
             </div>
             {% if has_fts %}
                 <div>
-                    <input id="full_text" type="checkbox" name="full_text" value="1" {{ full_text|yesno:"checked" }}>
+                    <input id="full_text" type="checkbox" name="full_text" value="1" {% if full_text %}checked{% endif %}>
                     <label for="full_text">{{ _('Full text search') }}</label>
                 </div>
             {% endif %}
             {% if request.user.is_authenticated %}
                 <div>
-                    <input id="hide_solved" type="checkbox" name="hide_solved" value="1" {% if hide_solved %} checked {% endif %}>
+                    <input id="hide_solved" type="checkbox" name="hide_solved" value="1" {% if hide_solved %}checked{% endif %}>
                     <label for="hide_solved">{{ _('Hide solved problems') }}</label>
                 </div>
             {% endif %}
@@ -25,12 +25,12 @@
                     type="checkbox" 
                     name="has_public_editorial" 
                     value="1" 
-                    checked="{{ 'true' if has_public_editorial else 'false' }}"
+                    {% if has_public_editorial %}checked{% endif %}
                 >
                 <label for="has_public_editorial">{{ _('Has editorial') }}</label>
             </div>
             <div>
-                <input id="show_types" type="checkbox" name="show_types" value="1" {{ show_types|yesno:"checked" }}>
+                <input id="show_types" type="checkbox" name="show_types" value="1" {% if show_types %} checked{% endif %}>
                 <label for="show_types">{{ _('Show problem types') }}</label>
             </div>
             <div class="filter-form-group">
@@ -42,7 +42,7 @@
                         <option value="">{{ _('All') }}</option>{% endif %}
                     <option disabled="disabled">---</option>
                     {% for group in categories %}
-                        <option value="{{ group.id }}" {{ group.id == category|yesno:"selected" }}>
+                        <option value="{{ group.id }}" {% if group.id == category %}selected{% endif %}>
                             {{ group.full_name }}
                         </option>
                     {% endfor %}
@@ -52,7 +52,7 @@
                 <label for="type"><i>{{ _('Problem types') }}</i></label>
                 <select id="types" name="type" multiple>
                     {% for type in problem_types %}
-                        <option value="{{ type.id }}" {{ type.id in selected_types|yesno:"selected" }}>
+                        <option value="{{ type.id }}" {% if type.id in selected_types %}selected{% endif %}>
                             {{ user_trans(type.full_name) }}
                         </option>
                     {% endfor %}
@@ -66,15 +66,13 @@
                 id="point-start" 
                 type="hidden" 
                 name="point_start" 
-                value="{{ point_start if point_start and point_start != point_values.min else '' }}" 
-                disabled="'true' if point_start and point_start != point_values.min else 'false'"
+                {% if point_start and point_start != point_values.min %}value="{{ point_start }}"{% else %}disabled{% endif %}
             >
             <input 
                 id="point-end" 
                 type="hidden" 
-                name="point_end"
-                value="{{ point_end if point_end and point_end != point_values.max else '' }}" 
-                disabled="'true' if point_end and point_end != point_values.max else 'false'"
+                name="point_end" 
+                {% if point_end and point_end != point_values.max %}value="{{ point_end }}"{% else %}disabled{% endif %}
             >
             <div class="form-submit-group">
                 <a id="go" class="button">{{ _('Go') }}</a>
@@ -82,16 +80,6 @@
             </div>
         </form>
 
-        <script>
-            const my_options = $("#types option");
-            const selected = $("#types").val();
-
-            my_options.sort((a,b) => {
-                return a.text.localeCompare(b.text, 'vi');
-            })
-
-            $("#types").empty().append(my_options);
-            $("#types").val(selected);
-        </script>
+        <script src="{{ static('bundled/problem/search-form.js') }}"></script>
     </div>
 </div>
