--- a/templates/status/media-js.html
+++ b/templates/status/media-js.html
@@ -1,63 +1,4 @@
-<script type="module">
-    import "$prebundled/tablesorter.js";
-
-    $(document).ready(() => {
-        const table = $("#judge-status");
-        table.tablesorter();
-
-        const tooltip_classes = 'tooltipped tooltipped-w';
-        let active_judge = null;
-        let active_lang = null;
-
-        function display_tooltip(where) {
-            where.addClass(tooltip_classes).attr('aria-label', where.attr('data-runtime-info'));
-        }
-
-        function install_tooltips() {
-            $('.runtime-label').each(() => {
-                const link = $(this);
-                link.mouseenter((e) => {
-                    active_judge = link.attr('data-judge');
-                    active_lang = link.attr('data-lang');
-                    display_tooltip(link);
-                }).mouseleave((e) => {
-                    active_judge = active_lang = null;
-                    link.removeClass(tooltip_classes).removeAttr('aria-label');
-                });
-            });
-        }
-
-        let outdated = false;
-
-        function update_table() {
-            if ($('body').hasClass('window-hidden'))
-                return outdated = true;
-            $.ajax({
-                url: "{{ url('status_table') }}"
-            }).done((data) => {
-                // Readd the tooltip classes to minimize flicker on update
-                const new_node = $(data);
-
-                if (active_lang && active_judge) {
-                    const selected = new_node.find('[data-judge=' + active_judge + '][data-lang=' + active_lang + ']');
-                    if (selected) // Might have been removed, when a judge disconnected
-                        display_tooltip(selected);
-                }
-
-                table.html(new_node);
-                install_tooltips();
-            }).always(() => {
-                outdated = false;
-                setTimeout(update_table, 10000);
-            });
-        }
-
-        $(window).on('dmoj:window-visible', () => {
-            if (outdated)
-                update_table();
-        });
-
-        setTimeout(update_table, 10000);
-        install_tooltips();
-    });
-</script>
+<script 
+    src="{{ static('bundled/status/media-js.js') }}"
+    data-status-table-url="{{ url('status_table') }}"
+></script>
