--- a/templates/status/oj-status.html
+++ b/templates/status/oj-status.html
@@ -2,99 +2,7 @@
 
 {% block js_media %}
     {% compress js %}
-        {% include "stats/media-js.html" %}
-        <script type="module">
-            import "$vnoj/daterangepicker/daterangepicker.min.js";
-
-            let by_day_chart = null;
-            let by_language_chart = null;
-            let result_chart = null;
-            let queue_time_chart = null;
-            let org_by_day_chart = null;
-
-            function draw_charts(start_date, end_date) {
-                $.ajax({
-                    url: "{{ url('stats_data_all') }}",
-                    type: 'POST',
-                    data: {
-                        start_date: start_date.toISOString(),
-                        end_date: end_date.toISOString(),
-                        utc_offset: moment().utcOffset()
-                    },
-                    success(stats) {
-                        if (by_day_chart == null) {
-                            by_day_chart = draw_vertical_stacked_bar_chart(stats.by_day, $('#by-day'));
-                        } else {
-                            by_day_chart.data = stats.by_day;
-                            by_day_chart.update();
-                        }
-                        if (by_language_chart == null) {
-                            by_language_chart = draw_pie_chart(stats.by_language, $('#by-language'));
-                        } else {
-                            by_language_chart.data = stats.by_language;
-                            by_language_chart.update();
-                        }
-                        if (result_chart == null) {
-                            result_chart = draw_pie_chart(stats.result, $('#result'));
-                        } else {
-                            result_chart.data = stats.result;
-                            result_chart.update();
-                        }
-                        if (queue_time_chart == null) {
-                            queue_time_chart = draw_bar_chart(stats.queue_time, $('#queue-time'), false);
-                        } else {
-                            queue_time_chart.data = stats.queue_time;
-                            queue_time_chart.update();
-                        }
-                        if (org_by_day_chart == null) {
-                            org_by_day_chart = draw_vertical_stacked_bar_chart(stats.org_by_day, $('#org-by-day'), true);
-                        } else {
-                            org_by_day_chart.data = stats.org_by_day;
-                            org_by_day_chart.update();
-                        }
-                    },
-                    error(data) {
-                        console.log('Could not load OJ stats');
-                    }
-                });
-            }
-
-            $(() => {
-                const date_format = "{{ _('HH:mm:ss MMMM D, YYYY') }}";
-
-                function cb(start_date, end_date) {
-                    $('#daterange span').html(start_date.format(date_format) + ' - ' + end_date.format(date_format));
-                }
-
-                $('#daterange').daterangepicker({
-                    timePicker: true,
-                    timePicker24Hour: true,
-                    timePickerSeconds: true,
-                    locale: {
-                        customRangeLabel: "{{ _('Custom Range') }}",
-                        applyLabel: "{{ _('Apply') }}",
-                        cancelLabel: "{{ _('Cancel') }}",
-                        fromLabel: "{{ _('From') }}",
-                        toLabel: "{{ _('To') }}"
-                    },
-                    ranges: {
-                        "{{ _('Last Minute') }}": [moment().subtract(1, 'minutes'), moment()],
-                        "{{ _('Last Hour') }}": [moment().subtract(1, 'hours'), moment()],
-                        "{{ _('Today') }}": [moment().startOf('day'), moment().endOf('day')],
-                        "{{ _('Yesterday') }}": [moment().subtract(1, 'days').startOf('day'), moment().subtract(1, 'days').endOf('day')],
-                        "{{ _('Last 7 Days') }}": [moment().subtract(6, 'days').startOf('day'), moment().endOf('day')],
-                        "{{ _('Last 14 Days') }}": [moment().subtract(13, 'days').startOf('day'), moment().endOf('day')],
-                        "{{ _('Last 30 Days') }}": [moment().subtract(29, 'days').startOf('day'), moment().endOf('day')],
-                        "{{ _('Last 60 Days') }}": [moment().subtract(59, 'days').startOf('day'), moment().endOf('day')],
-                        "{{ _('Last 90 Days') }}": [moment().subtract(89, 'days').startOf('day'), moment().endOf('day')]
-                    }
-                }, cb);
-
-                $('#daterange').on('apply.daterangepicker', (ev, picker) => {
-                    draw_charts(picker.startDate, picker.endDate);
-                });
-            });
-        </script>
+        <script src="{{ static('bundled/status/oj-status.js') }}" data-stats-data-all="{{ url('stats_data_all') }}"></script>
     {% endcompress %}
     {% include "contest/media-js.html" %}
 {% endblock %}
