--- a/templates/submission/list.html
+++ b/templates/submission/list.html
@@ -32,7 +32,7 @@
             }
         }
         window.results_json = JSON.parse(document.getElementById("results-json").textContent);
-        window.results_colors_json = JSON.parse(document.getElementById("results-colors-json")).textContent;
+        window.results_colors_json = JSON.parse(document.getElementById("results-colors-json").textContent);
     </script>
 
     {% compress js %}
